--- a/index.html
+++ b/index.html
@@ -25,9 +25,14 @@
         </div>
 
         <div class="nav">
-            <a href="#">Pervious</a>
-            <a href="#">Next</a>
+            <a href="#" onclick="previous();">Pervious</a>
+            <a href="#" onclick="setSlide(0);">1</a>
+            <a href="#" onclick="setSlide(1);">2</a>
+            <a href="#" onclick="setSlide(2);">3</a>
+            <a href="#" onclick="next();">Next</a>
         </div>
+
+        <div class="counter"></div>
     </div>
     
     <script src="slideshow.js"></script>
